initial push with sign up

--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,18 @@
 </head>
 <body>
 
-<div class="sidebar">
+<!-- <div class="sidebar">
     <a class="circle" href="#home">+</a>
     <span class="circle-text">Welcome To Your Business Dashboard</span>
     <a class="active" id="homeButton">Home</a>
     <a id="newsButton">News</a>
     <a id="contactButton">Contact</a>
     <a id="aboutButton">About</a>
-</div>
+    <a id="login">Login</a>
+</div> -->
 
 <div id="overlay" class="overlay" style="display: none;"></div>
-
+<!-- 
 <div class="content">
     <div class="radio-input">
       <label>
@@ -36,7 +37,7 @@
     <hr class="separator">
 
 
-    <!-- metric box-->
+    metric box
     <div class="box" id="editableBox">
         <h2 id="boxTitle">Empty Metric Box</h2>
         <label for="toggle"></label><input class="toggle-checkbox" id="toggle" type="checkbox" />
@@ -45,7 +46,7 @@
     </div>
     <hr class="space" id="space">
 
-    <!-- Overhead Modal -->
+    Overhead Modal
 <div class="modal2" id="overheadModal" style="display: none;">
     <div class="header">
         <h2 id="overheadTitle"></h2>
@@ -108,7 +109,7 @@
                     <li>Add $9,781.16 to Profit account.</li>
                 </ul>
                 <a href="#" id="link">View All</a>
-                <!-- Modal Structure -->
+                Modal Structure
 <div class="modal" id="viewAllModal" style="display: none;">
     <div class="modal-content">
         <span class="close">&times;</span>
@@ -137,7 +138,7 @@
         <label for="titleInput"></label>
         <input type="text" id="titleInput" placeholder="Enter new title">
 
-        <!-- From Uiverse.io by vinodjangid07 -->
+        From Uiverse.io by vinodjangid07
         <button class="bookmarkBtn" id="saveTitle">
             <span class="IconContainer">
                 <svg viewBox="0 0 384 512" height="0.9em" class="icon">
@@ -300,8 +301,10 @@ $(document).ready(function () {
 
 
 
-    <!-- switching frame-->
-    <script src="Change.js"></script>
-</div>
+    switching frame
+    <!-- <script src="Change.js"></script> -->
+<!-- </div> --> -->
+<div id="root"></div>
+
 
 
